npiet-foogol.output
Grammar

    0 $accept: foogol $end

    1 foogol: /* empty */
    2       | program

    3 identifier: STR

    4 expr: NUM
    5     | identifier
    6     | '(' expr ')'
    7     | '+' expr
    8     | '-' expr
    9     | expr '*' expr
   10     | expr '/' expr
   11     | expr '+' expr
   12     | expr '-' expr
   13     | '!' expr
   14     | expr '>' expr
   15     | expr '<' expr
   16     | expr '=' expr
   17     | expr '#' expr

   18 program: block

   19 begin: TBEGIN

   20 end: TEND

   21 @1: /* empty */

   22 block: begin decl ';' stmt_list @1 end

   23 @2: /* empty */

   24 block: begin stmt_list @2 end

   25 decl: TINTEGER id_seq

   26 id_seq: identifier ',' id_seq
   27       | identifier

   28 stmt_list: stmt ';' stmt_list
   29          | stmt

   30 stmt: op_stmt
   31     | cl_stmt

   32 op_stmt: TIF expr TTHEN stmt
   33        | TIF expr TTHEN cl_stmt TELSE op_stmt
   34        | TWHILE expr TDO op_stmt

   35 cl_stmt: simple_stmt
   36        | TIF expr TTHEN cl_stmt TELSE cl_stmt
   37        | TWHILE expr TDO cl_stmt

   38 simple_stmt: io_stmt
   39            | assign_stmt
   40            | block

   41 io_stmt: TPRINT
   42        | TPRINTS '(' QSTR ')'
   43        | TPRINTN '(' expr ')'

   44 assign_stmt: identifier ':' '=' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 13
'#' (35) 17
'(' (40) 6 42 43
')' (41) 6 42 43
'*' (42) 9
'+' (43) 7 11
',' (44) 26
'-' (45) 8 12
'/' (47) 10
':' (58) 44
';' (59) 22 28
'<' (60) 15
'=' (61) 16 44
'>' (62) 14
error (256)
TBEGIN (258) 19
TEND (259) 20
TINTEGER (260) 25
TPRINTS (261) 42
TPRINTN (262) 43
TPRINT (263) 41
TIF (264) 32 33 36
TTHEN (265) 32 33 36
TELSE (266) 33 36
TWHILE (267) 34 37
TDO (268) 34 37
NUM (269) 4
STR (270) 3
QSTR (271) 42
UNARY (272)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
foogol (33)
    on left: 1 2, on right: 0
identifier (34)
    on left: 3, on right: 5 26 27 44
expr (35)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17, on right: 6 7 8 9
    10 11 12 13 14 15 16 17 32 33 34 36 37 43 44
program (36)
    on left: 18, on right: 2
begin (37)
    on left: 19, on right: 22 24
end (38)
    on left: 20, on right: 22 24
block (39)
    on left: 22 24, on right: 18 40
@1 (40)
    on left: 21, on right: 22
@2 (41)
    on left: 23, on right: 24
decl (42)
    on left: 25, on right: 22
id_seq (43)
    on left: 26 27, on right: 25 26
stmt_list (44)
    on left: 28 29, on right: 22 24 28
stmt (45)
    on left: 30 31, on right: 28 29 32
op_stmt (46)
    on left: 32 33 34, on right: 30 33 34
cl_stmt (47)
    on left: 35 36 37, on right: 31 33 36 37
simple_stmt (48)
    on left: 38 39 40, on right: 35
io_stmt (49)
    on left: 41 42 43, on right: 38
assign_stmt (50)
    on left: 44, on right: 39


state 0

    0 $accept: . foogol $end

    TBEGIN  shift, and go to state 1

    $default  reduce using rule 1 (foogol)

    foogol   go to state 2
    program  go to state 3
    begin    go to state 4
    block    go to state 5


state 1

   19 begin: TBEGIN .

    $default  reduce using rule 19 (begin)


state 2

    0 $accept: foogol . $end

    $end  shift, and go to state 6


state 3

    2 foogol: program .

    $default  reduce using rule 2 (foogol)


state 4

   22 block: begin . decl ';' stmt_list @1 end
   24      | begin . stmt_list @2 end

    TBEGIN    shift, and go to state 1
    TINTEGER  shift, and go to state 7
    TPRINTS   shift, and go to state 8
    TPRINTN   shift, and go to state 9
    TPRINT    shift, and go to state 10
    TIF       shift, and go to state 11
    TWHILE    shift, and go to state 12
    STR       shift, and go to state 13

    identifier   go to state 14
    begin        go to state 4
    block        go to state 15
    decl         go to state 16
    stmt_list    go to state 17
    stmt         go to state 18
    op_stmt      go to state 19
    cl_stmt      go to state 20
    simple_stmt  go to state 21
    io_stmt      go to state 22
    assign_stmt  go to state 23


state 5

   18 program: block .

    $default  reduce using rule 18 (program)


state 6

    0 $accept: foogol $end .

    $default  accept


state 7

   25 decl: TINTEGER . id_seq

    STR  shift, and go to state 13

    identifier  go to state 24
    id_seq      go to state 25


state 8

   42 io_stmt: TPRINTS . '(' QSTR ')'

    '('  shift, and go to state 26


state 9

   43 io_stmt: TPRINTN . '(' expr ')'

    '('  shift, and go to state 27


state 10

   41 io_stmt: TPRINT .

    $default  reduce using rule 41 (io_stmt)


state 11

   32 op_stmt: TIF . expr TTHEN stmt
   33        | TIF . expr TTHEN cl_stmt TELSE op_stmt
   36 cl_stmt: TIF . expr TTHEN cl_stmt TELSE cl_stmt

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 34


state 12

   34 op_stmt: TWHILE . expr TDO op_stmt
   37 cl_stmt: TWHILE . expr TDO cl_stmt

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 35


state 13

    3 identifier: STR .

    $default  reduce using rule 3 (identifier)


state 14

   44 assign_stmt: identifier . ':' '=' expr

    ':'  shift, and go to state 36


state 15

   40 simple_stmt: block .

    $default  reduce using rule 40 (simple_stmt)


state 16

   22 block: begin decl . ';' stmt_list @1 end

    ';'  shift, and go to state 37


state 17

   24 block: begin stmt_list . @2 end

    $default  reduce using rule 23 (@2)

    @2  go to state 38


state 18

   28 stmt_list: stmt . ';' stmt_list
   29          | stmt .

    ';'  shift, and go to state 39

    $default  reduce using rule 29 (stmt_list)


state 19

   30 stmt: op_stmt .

    $default  reduce using rule 30 (stmt)


state 20

   31 stmt: cl_stmt .

    $default  reduce using rule 31 (stmt)


state 21

   35 cl_stmt: simple_stmt .

    $default  reduce using rule 35 (cl_stmt)


state 22

   38 simple_stmt: io_stmt .

    $default  reduce using rule 38 (simple_stmt)


state 23

   39 simple_stmt: assign_stmt .

    $default  reduce using rule 39 (simple_stmt)


state 24

   26 id_seq: identifier . ',' id_seq
   27       | identifier .

    ','  shift, and go to state 40

    $default  reduce using rule 27 (id_seq)


state 25

   25 decl: TINTEGER id_seq .

    $default  reduce using rule 25 (decl)


state 26

   42 io_stmt: TPRINTS '(' . QSTR ')'

    QSTR  shift, and go to state 41


state 27

   43 io_stmt: TPRINTN '(' . expr ')'

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 42


state 28

    4 expr: NUM .

    $default  reduce using rule 4 (expr)


state 29

    7 expr: '+' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 43


state 30

    8 expr: '-' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 44


state 31

    6 expr: '(' . expr ')'

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 45


state 32

   13 expr: '!' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 46


state 33

    5 expr: identifier .

    $default  reduce using rule 5 (expr)


state 34

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr
   32 op_stmt: TIF expr . TTHEN stmt
   33        | TIF expr . TTHEN cl_stmt TELSE op_stmt
   36 cl_stmt: TIF expr . TTHEN cl_stmt TELSE cl_stmt

    TTHEN  shift, and go to state 47
    '='    shift, and go to state 48
    '#'    shift, and go to state 49
    '>'    shift, and go to state 50
    '<'    shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55


state 35

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr
   34 op_stmt: TWHILE expr . TDO op_stmt
   37 cl_stmt: TWHILE expr . TDO cl_stmt

    TDO  shift, and go to state 56
    '='  shift, and go to state 48
    '#'  shift, and go to state 49
    '>'  shift, and go to state 50
    '<'  shift, and go to state 51
    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55


state 36

   44 assign_stmt: identifier ':' . '=' expr

    '='  shift, and go to state 57


state 37

   22 block: begin decl ';' . stmt_list @1 end

    TBEGIN   shift, and go to state 1
    TPRINTS  shift, and go to state 8
    TPRINTN  shift, and go to state 9
    TPRINT   shift, and go to state 10
    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    STR      shift, and go to state 13

    identifier   go to state 14
    begin        go to state 4
    block        go to state 15
    stmt_list    go to state 58
    stmt         go to state 18
    op_stmt      go to state 19
    cl_stmt      go to state 20
    simple_stmt  go to state 21
    io_stmt      go to state 22
    assign_stmt  go to state 23


state 38

   24 block: begin stmt_list @2 . end

    TEND  shift, and go to state 59

    end  go to state 60


state 39

   28 stmt_list: stmt ';' . stmt_list

    TBEGIN   shift, and go to state 1
    TPRINTS  shift, and go to state 8
    TPRINTN  shift, and go to state 9
    TPRINT   shift, and go to state 10
    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    STR      shift, and go to state 13

    identifier   go to state 14
    begin        go to state 4
    block        go to state 15
    stmt_list    go to state 61
    stmt         go to state 18
    op_stmt      go to state 19
    cl_stmt      go to state 20
    simple_stmt  go to state 21
    io_stmt      go to state 22
    assign_stmt  go to state 23


state 40

   26 id_seq: identifier ',' . id_seq

    STR  shift, and go to state 13

    identifier  go to state 24
    id_seq      go to state 62


state 41

   42 io_stmt: TPRINTS '(' QSTR . ')'

    ')'  shift, and go to state 63


state 42

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr
   43 io_stmt: TPRINTN '(' expr . ')'

    '='  shift, and go to state 48
    '#'  shift, and go to state 49
    '>'  shift, and go to state 50
    '<'  shift, and go to state 51
    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55
    ')'  shift, and go to state 64


state 43

    7 expr: '+' expr .
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr

    $default  reduce using rule 7 (expr)


state 44

    8 expr: '-' expr .
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr

    $default  reduce using rule 8 (expr)


state 45

    6 expr: '(' expr . ')'
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr

    '='  shift, and go to state 48
    '#'  shift, and go to state 49
    '>'  shift, and go to state 50
    '<'  shift, and go to state 51
    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55
    ')'  shift, and go to state 65


state 46

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   13     | '!' expr .
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr

    $default  reduce using rule 13 (expr)


state 47

   32 op_stmt: TIF expr TTHEN . stmt
   33        | TIF expr TTHEN . cl_stmt TELSE op_stmt
   36 cl_stmt: TIF expr TTHEN . cl_stmt TELSE cl_stmt

    TBEGIN   shift, and go to state 1
    TPRINTS  shift, and go to state 8
    TPRINTN  shift, and go to state 9
    TPRINT   shift, and go to state 10
    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    STR      shift, and go to state 13

    identifier   go to state 14
    begin        go to state 4
    block        go to state 15
    stmt         go to state 66
    op_stmt      go to state 19
    cl_stmt      go to state 67
    simple_stmt  go to state 21
    io_stmt      go to state 22
    assign_stmt  go to state 23


state 48

   16 expr: expr '=' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 68


state 49

   17 expr: expr '#' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 69


state 50

   14 expr: expr '>' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 70


state 51

   15 expr: expr '<' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 71


state 52

   11 expr: expr '+' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 72


state 53

   12 expr: expr '-' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 73


state 54

    9 expr: expr '*' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 74


state 55

   10 expr: expr '/' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 75


state 56

   34 op_stmt: TWHILE expr TDO . op_stmt
   37 cl_stmt: TWHILE expr TDO . cl_stmt

    TBEGIN   shift, and go to state 1
    TPRINTS  shift, and go to state 8
    TPRINTN  shift, and go to state 9
    TPRINT   shift, and go to state 10
    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    STR      shift, and go to state 13

    identifier   go to state 14
    begin        go to state 4
    block        go to state 15
    op_stmt      go to state 76
    cl_stmt      go to state 77
    simple_stmt  go to state 21
    io_stmt      go to state 22
    assign_stmt  go to state 23


state 57

   44 assign_stmt: identifier ':' '=' . expr

    NUM  shift, and go to state 28
    STR  shift, and go to state 13
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31
    '!'  shift, and go to state 32

    identifier  go to state 33
    expr        go to state 78


state 58

   22 block: begin decl ';' stmt_list . @1 end

    $default  reduce using rule 21 (@1)

    @1  go to state 79


state 59

   20 end: TEND .

    $default  reduce using rule 20 (end)


state 60

   24 block: begin stmt_list @2 end .

    $default  reduce using rule 24 (block)


state 61

   28 stmt_list: stmt ';' stmt_list .

    $default  reduce using rule 28 (stmt_list)


state 62

   26 id_seq: identifier ',' id_seq .

    $default  reduce using rule 26 (id_seq)


state 63

   42 io_stmt: TPRINTS '(' QSTR ')' .

    $default  reduce using rule 42 (io_stmt)


state 64

   43 io_stmt: TPRINTN '(' expr ')' .

    $default  reduce using rule 43 (io_stmt)


state 65

    6 expr: '(' expr ')' .

    $default  reduce using rule 6 (expr)


state 66

   32 op_stmt: TIF expr TTHEN stmt .

    $default  reduce using rule 32 (op_stmt)


state 67

   31 stmt: cl_stmt .
   33 op_stmt: TIF expr TTHEN cl_stmt . TELSE op_stmt
   36 cl_stmt: TIF expr TTHEN cl_stmt . TELSE cl_stmt

    TELSE  shift, and go to state 80

    $default  reduce using rule 31 (stmt)


state 68

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   16     | expr '=' expr .
   17     | expr . '#' expr

    '>'  shift, and go to state 50
    '<'  shift, and go to state 51
    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 16 (expr)


state 69

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr
   17     | expr '#' expr .

    '>'  shift, and go to state 50
    '<'  shift, and go to state 51
    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 17 (expr)


state 70

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   14     | expr '>' expr .
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr

    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 14 (expr)


state 71

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   15     | expr '<' expr .
   16     | expr . '=' expr
   17     | expr . '#' expr

    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 15 (expr)


state 72

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   11     | expr '+' expr .
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 11 (expr)


state 73

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   12     | expr '-' expr .
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 12 (expr)


state 74

    9 expr: expr . '*' expr
    9     | expr '*' expr .
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr

    $default  reduce using rule 9 (expr)


state 75

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   10     | expr '/' expr .
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr

    $default  reduce using rule 10 (expr)


state 76

   34 op_stmt: TWHILE expr TDO op_stmt .

    $default  reduce using rule 34 (op_stmt)


state 77

   37 cl_stmt: TWHILE expr TDO cl_stmt .

    $default  reduce using rule 37 (cl_stmt)


state 78

    9 expr: expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '+' expr
   12     | expr . '-' expr
   14     | expr . '>' expr
   15     | expr . '<' expr
   16     | expr . '=' expr
   17     | expr . '#' expr
   44 assign_stmt: identifier ':' '=' expr .

    '='  shift, and go to state 48
    '#'  shift, and go to state 49
    '>'  shift, and go to state 50
    '<'  shift, and go to state 51
    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 44 (assign_stmt)


state 79

   22 block: begin decl ';' stmt_list @1 . end

    TEND  shift, and go to state 59

    end  go to state 81


state 80

   33 op_stmt: TIF expr TTHEN cl_stmt TELSE . op_stmt
   36 cl_stmt: TIF expr TTHEN cl_stmt TELSE . cl_stmt

    TBEGIN   shift, and go to state 1
    TPRINTS  shift, and go to state 8
    TPRINTN  shift, and go to state 9
    TPRINT   shift, and go to state 10
    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    STR      shift, and go to state 13

    identifier   go to state 14
    begin        go to state 4
    block        go to state 15
    op_stmt      go to state 82
    cl_stmt      go to state 83
    simple_stmt  go to state 21
    io_stmt      go to state 22
    assign_stmt  go to state 23


state 81

   22 block: begin decl ';' stmt_list @1 end .

    $default  reduce using rule 22 (block)


state 82

   33 op_stmt: TIF expr TTHEN cl_stmt TELSE op_stmt .

    $default  reduce using rule 33 (op_stmt)


state 83

   36 cl_stmt: TIF expr TTHEN cl_stmt TELSE cl_stmt .

    $default  reduce using rule 36 (cl_stmt)
